26 March 2007

* Option to use SYSV shared memory (build with make -DSHM_SYSV). Not a real
  option, or documented, yet because I'm not sure how to deal with cleaning up
  on SIGTERM. It might even go away again.
* Play some games to ensure that that the full extent of the mmap'd temporary
  file is actually writable before using it. Otherwise if there is insufficient
  disk space we risk getting an unexpected SIGBUS later when trying to use it.
* When sending delivery done messages, check that the child process isn't dead
  before trying to talk to it. 

25 March 2007

* Handle unlink(2)/fclose(3) failures, led to discovery of a missing fflush
  before fsync and a double-unlink of a tmp file (bad!), also fixed. Part of bug
  1687830 from Markus Elfring. Also fix some closedir(3) return value checks.
  I'm still on the fence about close(2). SUSv3 says that it can only die on
  EBADF, EINTR and EIO: the first will cause problems before close, and I don't
  see how the latter can affect anything given that write(2) (or fsync(2) when
  applicable) will have previously returned success (fdm already checks their
  return). OTOH, it would be both tidy and future-proof to check it.

22 March 2007

* Return total number of mails from start function if possible and print 
  "X of Y" when reporting mail fetches with -v.

21 March 2007

* queue-low and queue-high options. Default queue limit is 2.
* Default maximum-size now 32 MB and maximum now 1 GB.

20 March 2007

* -q option to quiet unnecessary chatter.
* If user/pass is not specified on IMAP or POP3 accounts, attempt to read it
  from the ~/.netrc file.
* Redo child fetch stuff so that exec/pipe matches actually works
* Stop exec/pipe matches early if only checking for regexp and it is found.
* Sprinkle a few fsyncs, and block SIGTERM while writing to mboxes.

18 March 2007

* Informational messages now go to stdout rather than stderr.

16 March 2007
